--- a/index.html
+++ b/index.html
@@ -231,13 +231,34 @@
                 <i class="bi bi-list"></i>
                 <h1>Khách hàng</h1>
             </nav>
-            <nav class="main-nav-lg">
+            <nav class="main-nav-lg" style="position: relative;">
                 <h1>CRM</h1>
                 <div class="nav-list">
                     <a class="nav-lg-items KH acc">Khách hàng</a>
-                    <a class="nav-lg-items BC">Báo cáo doanh thu khách hàng</a>
+                    <div class="nav-lg-items BC" onmouseover="gg()" onmouseout="ff()">Báo cáo doanh thu khách hàng
+                        <div class="BC_more">
+                            <a class="option_bc bcdt">
+                                <p>Báo cáo doanh thu</p>
+                            </a>
+                            <a class="option_bc hdt">
+                                <p>Kê hóa đơn tồn</p>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </nav>
+            <script>
+                let weight = document.querySelector('.BC').offsetWidth;
+                let heightbc = document.querySelector('.main-nav-lg').offsetHeight;
+                document.querySelector('.BC_more').style.top = `${heightbc}px`
+                document.querySelector('.BC_more').style.width = `${weight}px`
+                function gg() {
+                    document.querySelector('.BC_more').classList.add('acc')
+                }
+                function ff() {
+                    document.querySelector('.BC_more').classList.remove('acc')
+                }
+            </script>
             <div id="main-con">
                 <div class="nav-i-lg">
                     <div class="additems">
@@ -258,26 +279,58 @@
             </div>
             <div id="main-bc" style="display: none;">
                 <div class="nav-i-lg_bc">
-                    <h1 style="font-size: 1.5rem;justify-content: center;width: 100%;display: flex;gap: 1rem;">Báo cáo
+                    <div
+                        style="display: flex;gap: 1rem;align-items: center;padding: 1rem;width: max-content;position: absolute;">
+                        <h1 style="font-size: 1rem; width: max-content;">Chọn kì:</h1>
+                        <select id="kibaocaodt" style="
+                        outline: none;
+                        margin: 0 10px;
+                        padding: 5px 15px;
+                        border: unset;
+                        background-color:#EBEDF0;
+                        border-bottom: 1px solid #9e9e9e;" onchange="thaydoi(this)"></select>
+                    </div>
+                    <h1
+                        style="font-size: 1.5rem;justify-content: center;width: 100%;display: flex;gap: 1rem;text-transform: capitalize;">
+                        Báo cáo
                         doanh
-                        thu khách hàng kì <p>
+                        thu khách hàng<p>
                         </p>
                     </h1>
                 </div>
                 <div class="KH-list">
                     <div id="BC-list">
-                        <div style="display: flex;gap: 1rem;align-items: center;padding: 1rem;">
-                            Chọn kì:
-                            <select id="kibaocaodt" style="
-                            outline: none;
-                            margin: 0 10px;
-                            padding: 5px 15px;
-                            border: unset;
-                            border-bottom: 1px solid #9e9e9e;" onchange="thaydoi(this)"></select>
-                        </div>
-                        <div class="dsds">
-                            <div class="thttKH-main-wrap" style="border-radius: unset;">
-                                <div class="thttKH_title">
+                        <div class="dsds" style="display: flex;justify-content: center;">
+                            <div class="thttKH-main-wrap" style="border-radius: unset; border: unset;padding: 10px;max-width: 1400px;
+                            min-width: 1400px;">
+                                <div>
+                                    <div style="display: flex;">
+                                        <div style="flex: 1;" class="title--325">
+                                            <h1>CÔNG TY CỔ PHẦN CẤP NƯỚC ĐỒNG NAI</h1>
+                                            <h1>PHÒNG QUẢN LÝ GHI THU</h1>
+                                        </div>
+                                        <div style="flex: 1;" class="title--325">
+                                            <h1>CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM</h1>
+                                            <h1>Độc lập- Tự do- Hạnh phúc</h1>
+                                        </div>
+                                        <style>
+                                            .title--325>h1 {
+                                                text-align: center;
+                                                font-size: .9rem;
+                                            }
+
+                                            .title-bkhdt__325 {
+                                                font-size: 1.2rem;
+                                                text-align: center;
+                                                padding: 30px 0;
+                                            }
+                                        </style>
+                                    </div>
+                                    <div>
+                                        <h1 class="title-bkhdt__325">BẢNG CÁO DOANH THU KHÁCH HÀNG</h1>
+                                    </div>
+                                </div>
+                                <div class="thttKH_title" style="border: 1px solid #9e9e9e;">
                                     <p></p>
                                     <p>Số HĐ</p>
                                     <p>M3 TT</p>
@@ -288,6 +341,74 @@
                                     <p>cộng</p>
                                 </div>
                                 <div class="thttKH_main" id="bcdtkh_main"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="main-hdt" style="display: none;">
+                <div class="nav-i-lg_bc">
+                    <div
+                        style="display: flex;gap: 1rem;align-items: center;padding: 1rem;width: max-content;position: absolute;">
+                        <h1 style="font-size: 1rem; width: max-content;">Chọn kì:</h1>
+                        <select id="kihoadonton" style="
+                        outline: none;
+                        margin: 0 10px;
+                        padding: 5px 15px;
+                        border: unset;
+                        background-color:#EBEDF0;
+                        border-bottom: 1px solid #9e9e9e;" onchange="thaydoi(this)"></select>
+                    </div>
+                    <h1
+                        style="font-size: 1.5rem;justify-content: center;width: 100%;display: flex;gap: 1rem;text-transform: capitalize;">
+                        Báo cáo
+                        doanh
+                        thu khách hàng<p>
+                        </p>
+                    </h1>
+                </div>
+                <div class="KH-list">
+                    <div id="BC-list">
+                        <div class="dsds" style="display: flex;justify-content: center;">
+                            <div class="thttKH-main-wrap" style="border-radius: unset; border: unset;padding: 10px;max-width: 1400px;
+                            min-width: 1400px;">
+                                <div>
+                                    <div style="display: flex;">
+                                        <div style="flex: 1;" class="title--325">
+                                            <h1>CÔNG TY CỔ PHẦN CẤP NƯỚC ĐỒNG NAI</h1>
+                                            <h1>PHÒNG QUẢN LÝ GHI THU</h1>
+                                        </div>
+                                        <div style="flex: 1;" class="title--325">
+                                            <h1>CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM</h1>
+                                            <h1>Độc lập- Tự do- Hạnh phúc</h1>
+                                        </div>
+                                        <style>
+                                            .title--325>h1 {
+                                                text-align: center;
+                                                font-size: .9rem;
+                                            }
+
+                                            .title-bkhdt__325 {
+                                                font-size: .9rem;
+                                                text-align: center;
+                                            }
+                                        </style>
+                                    </div>
+                                    <div>
+                                        <h1 class="title-bkhdt__325">BẢNG KÊ HÓA ĐƠN TỒN</h1>
+                                    </div>
+                                </div>
+                                <div class="thttKH_title" style="border: 1px solid #9e9e9e;">
+                                    <p></p>
+                                    <p>Số HĐ</p>
+                                    <p>M3 TT</p>
+                                    <p>Tiền nước giảm</p>
+                                    <p>tiền nước</p>
+                                    <p>tiền thuế</p>
+                                    <p>tiền phí</p>
+                                    <p>cộng</p>
+                                </div>
+                                <div class="thttKH_main" id="bchdt_main"></div>
                             </div>
                         </div>
                     </div>
@@ -307,18 +428,44 @@
         function navcrm() {
             if (document.querySelector('.KH.acc') != null) {
                 document.querySelector('#main-con').style.display = 'block'
-                document.querySelector('.BC').onclick = () => {
+                document.querySelector('.bcdt').onclick = () => {
                     document.querySelector('.KH').classList.remove('acc')
-                    document.querySelector('.BC').classList.add('acc')
+                    document.querySelector('.bcdt').classList.add('acc')
                     document.querySelector('#main-con').style.display = 'none'
                     navcrm()
                 }
-            } else if (document.querySelector('.BC.acc') != null) {
+                document.querySelector('.hdt').onclick = () => {
+                    document.querySelector('.KH').classList.remove('acc')
+                    document.querySelector('.hdt').classList.add('acc')
+                    document.querySelector('#main-con').style.display = 'none'
+                    navcrm()
+                }
+            } else if (document.querySelector('.bcdt.acc') != null) {
                 document.querySelector('#main-bc').style.display = 'block'
                 document.querySelector('.KH').onclick = () => {
-                    document.querySelector('.BC').classList.remove('acc')
+                    document.querySelector('.bcdt').classList.remove('acc')
                     document.querySelector('.KH').classList.add('acc')
                     document.querySelector('#main-bc').style.display = 'none'
+                    navcrm()
+                }
+                document.querySelector('.hdt').onclick = () => {
+                    document.querySelector('.bcdt').classList.remove('acc')
+                    document.querySelector('.hdt').classList.add('acc')
+                    document.querySelector('#main-bc').style.display = 'none'
+                    navcrm()
+                }
+            } else if (document.querySelector('.hdt.acc') != null) {
+                document.querySelector('#main-hdt').style.display = 'block'
+                document.querySelector('.bcdt').onclick = () => {
+                    document.querySelector('.hdt').classList.remove('acc')
+                    document.querySelector('.bcdt').classList.add('acc')
+                    document.querySelector('#main-hdt').style.display = 'none'
+                    navcrm()
+                }
+                document.querySelector('.KH').onclick = () => {
+                    document.querySelector('.hdt').classList.remove('acc')
+                    document.querySelector('.KH').classList.add('acc')
+                    document.querySelector('#main-hdt').style.display = 'none'
                     navcrm()
                 }
             }
