--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>CRM</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="Css/index.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"
+        integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
@@ -289,6 +292,10 @@
                         border: unset;
                         background-color:#EBEDF0;
                         border-bottom: 1px solid #9e9e9e;" onchange="thaydoi(this)"></select>
+                        <button onclick="ind()"
+                            style="cursor: pointer; background-color: #0d6efd; padding: 7px 25px;border: none;border-radius: 8px;color: white;">
+                            Xuất PDF
+                        </button>
                     </div>
                     <h1
                         style="font-size: 1.5rem;justify-content: center;width: 100%;display: flex;gap: 1rem;text-transform: capitalize;">
@@ -300,9 +307,9 @@
                 </div>
                 <div class="KH-list">
                     <div id="BC-list">
-                        <div class="dsds" style="display: flex;justify-content: center;">
-                            <div class="thttKH-main-wrap" style="border-radius: unset; border: unset;padding: 10px;max-width: 1400px;
-                            min-width: 1400px;">
+                        <div id="inbcdt" class="dsds" style="display: flex;justify-content: center;">
+                            <div class="thttKH-main-wrap" style="border-radius: unset; border: unset;padding: 10px;max-width: 1000px;
+                            min-width: 1000px;">
                                 <div>
                                     <div style="display: flex;">
                                         <div style="flex: 1;" class="title--325">
@@ -358,6 +365,10 @@
                         border: unset;
                         background-color:#EBEDF0;
                         border-bottom: 1px solid #9e9e9e;" onchange="thaydoi(this)"></select>
+                        <button onclick="ind()"
+                            style="cursor: pointer; background-color: #0d6efd; padding: 7px 25px;border: none;border-radius: 8px;color: white;">
+                            Xuất PDF
+                        </button>
                     </div>
                     <h1
                         style="font-size: 1.5rem;justify-content: center;width: 100%;display: flex;gap: 1rem;text-transform: capitalize;">
@@ -370,8 +381,8 @@
                 <div class="KH-list">
                     <div id="BC-list">
                         <div class="dsds" style="display: flex;justify-content: center;">
-                            <div class="thttKH-main-wrap" style="border-radius: unset; border: unset;padding: 10px;max-width: 1400px;
-                            min-width: 1400px;">
+                            <div class="thttKH-main-wrap" style="border-radius: unset; border: unset;padding: 10px;max-width: 1000px;
+                            min-width: 1000px;">
                                 <div>
                                     <div style="display: flex;">
                                         <div style="flex: 1;" class="title--325">
